--- a/equalizerFeature/src/main/res/drawable/trackbar_progress.xml
+++ b/equalizerFeature/src/main/res/drawable/trackbar_progress.xml
@@ -7,14 +7,14 @@
     <layer-list >
         <item
             android:id="@android:id/background"
-            android:drawable="@drawable/trackbardisabledh"
+            android:drawable="@drawable/red"
             >
         </item>
         <item
             android:id="@android:id/progress">
             <clip
                 android:clipOrientation="horizontal"
-                android:drawable="@drawable/trackbarenabledh"
+                android:drawable="@drawable/red2"
                 android:gravity="left" />
         </item>
     </layer-list>
