--- a/equalizerFeature/src/main/res/layout/item_presets_spinner.xml
+++ b/equalizerFeature/src/main/res/layout/item_presets_spinner.xml
@@ -3,4 +3,5 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:textAlignment="center" />
+    android:textAlignment="center"
+    android:textColor="#FFFFFF" />
