--- a/equalizerFeature/src/main/res/layout/equalizer.xml
+++ b/equalizerFeature/src/main/res/layout/equalizer.xml
@@ -45,12 +45,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
-                    android:text="40Hz"
+                    android:text="60Hz"
                     android:textAlignment="center"
                     android:textColor="@color/branded_light" />
 
                 <com.yes.musicplayer.equalizer.presentation.ui.VerticalSeekBar
 
+                    android:id="@+id/one"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:progressDrawable="@drawable/trackbar_progress"
@@ -78,6 +79,7 @@
 
                 <com.yes.musicplayer.equalizer.presentation.ui.VerticalSeekBar
 
+                    android:id="@+id/two"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -89,7 +91,7 @@
                     style="@style/textSmall"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="230Hz"
                     android:textAlignment="center"
                     android:textColor="@color/branded_light"
                     tools:text="40Hz" />
@@ -115,6 +117,7 @@
 
                 <com.yes.musicplayer.equalizer.presentation.ui.VerticalSeekBar
 
+                    android:id="@+id/three"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -126,7 +129,7 @@
                     style="@style/textSmall"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="910Hz"
                     android:textAlignment="center"
                     android:textColor="@color/branded_light"
                     tools:text="40Hz" />
@@ -152,6 +155,7 @@
 
                 <com.yes.musicplayer.equalizer.presentation.ui.VerticalSeekBar
 
+                    android:id="@+id/four"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -163,7 +167,7 @@
                     style="@style/textSmall"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="3kHz"
                     android:textAlignment="center"
                     android:textColor="@color/branded_light"
                     tools:text="40Hz" />
@@ -189,6 +193,7 @@
 
                 <com.yes.musicplayer.equalizer.presentation.ui.VerticalSeekBar
 
+                    android:id="@+id/five"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -200,7 +205,7 @@
                     style="@style/textSmall"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="14kHz"
                     android:textAlignment="center"
                     android:textColor="@color/branded_light"
                     tools:text="40Hz" />
