bug: equalizer not working 20.02.2023

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/player_controls"
-            android:name="com.yes.player.presentation.ui.PlayerFragment"
+            android:name="com.yes.player.presentation.ui.PlayerScreen"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp">
