--- a/coreUI/src/main/res/values/styles.xml
+++ b/coreUI/src/main/res/values/styles.xml
@@ -25,8 +25,9 @@
         <item name="android:singleLine">true</item>
     </style >
     <style name="yesSwitch" parent="margin" >
-        <item name="android:layout_width">52dp</item>
-        <item name="android:layout_height">32dp</item>
+        <item name="android:layout_width">48dp</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:switchMinWidth">44dp</item>
     </style >
     <style name="ratingBar">
         <item name="colorControlNormal">#ffa800</item>
