--- a/equalizerFeature/src/main/res/layout/equalizer.xml
+++ b/equalizerFeature/src/main/res/layout/equalizer.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="8dp"
     android:orientation="horizontal"
     android:padding="5dp">
 
@@ -46,7 +47,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:progressDrawable="@drawable/trackbar_progress"
+                    android:progressDrawable="@drawable/trackbar_progress_enabled"
                     android:thumb="@drawable/thumb_layer" />
 
                 <TextView
@@ -219,6 +220,7 @@
         </LinearLayout>
 
         <LinearLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center|center_horizontal|center_vertical"
@@ -226,14 +228,16 @@
             android:orientation="horizontal">
 
             <Switch
-                android:id="@+id/switch1"
                 style="@style/yesSwitch"
-                android:layout_gravity="center_vertical" />
+                android:id="@+id/switch1"
+                android:thumb="@drawable/thumb"
+                android:track="@drawable/switch_selector" />
 
             <LinearLayout
                 style="@style/padding"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <Spinner
