--- a/equalizerFeature/src/main/res/layout/equalizer.xml
+++ b/equalizerFeature/src/main/res/layout/equalizer.xml
@@ -231,8 +231,9 @@
                 android:id="@+id/circularSeekBar"
                 android:layout_width="256dp"
                 android:layout_height="256dp"
+                android:background="@drawable/rotaryknobfinal"
                 android:max="270"
-                android:progressDrawable="@drawable/test_rotary_knob" />
+                android:progressDrawable="@drawable/tick_marks_final" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
