--- a/coreUI/src/main/res/values/colors.xml
+++ b/coreUI/src/main/res/values/colors.xml
@@ -8,8 +8,8 @@
     <color name="transparent">#00000000</color>
 
     <color name="shadow">#111111</color>
-    <color name="gray">#555555</color>
-    <color name="light">#aaaaaa</color>
+    <color name="gray">#888888</color>
+    <color name="light">#888888</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
 
