--- a/coreUI/src/main/res/values/styles.xml
+++ b/coreUI/src/main/res/values/styles.xml
@@ -17,6 +17,7 @@
     </style >
 
     <style name="textLabel" parent="margin">
+        <item name="android:textColor">@color/text_gray</item>
         <item name="android:textSize">14sp</item>
         <item name="android:singleLine">true</item>
     </style >
