--- a/coreUI/src/main/res/values/styles.xml
+++ b/coreUI/src/main/res/values/styles.xml
@@ -26,6 +26,10 @@
         <item name="android:singleLine">true</item>
     </style >
     <style name="yesSwitch" parent="margin" >
+        <item name="android:showText">false</item>
+        <item name="android:thumb">@drawable/thumb</item>
+        <item name="android:track">@drawable/switch_selector</item>
+
         <item name="android:layout_width">48dp</item>
         <item name="android:layout_height">48dp</item>
         <item name="android:switchMinWidth">44dp</item>
