--- a/alarmClockFeature/src/main/res/layout/item_alarmlist.xml
+++ b/alarmClockFeature/src/main/res/layout/item_alarmlist.xml
@@ -6,7 +6,8 @@
     android:layout_height="wrap_content"
     android:background="@drawable/background"
     android:descendantFocusability="blocksDescendants"
-    android:padding="1dp">
+    android:gravity="center_vertical"
+    android:padding="@dimen/padding_small">
 
 
     <TextView
@@ -22,14 +23,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <Switch
-            android:id="@+id/alarm_switch"
-            style="@style/yesSwitch"
-            android:layout_width="150dp"
-             />
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:padding="@dimen/padding_small">
 
         <TextView
             android:id="@+id/alarm_time_left"
@@ -47,6 +44,10 @@
             android:textColor="@color/text_gray"
             android:textSize="8sp" />
     </LinearLayout>
+
+    <Switch
+        android:id="@+id/alarm_switch"
+        style="@style/yesSwitch" />
 
 
 </LinearLayout>
