add: logo and icon 19.03.2023

--- a/coreUI/src/main/res/drawable-v21/splash.xml
+++ b/coreUI/src/main/res/drawable-v21/splash.xml
@@ -9,7 +9,7 @@
         </shape>
     </item>
     <item
-        android:drawable="@drawable/logo"
+        android:drawable="@drawable/logoredcolor"
         android:gravity="center">
 
     </item>
