refactor: EqualizerScreen add current value 20.03.2023

--- a/coreUI/src/main/res/values/styles.xml
+++ b/coreUI/src/main/res/values/styles.xml
@@ -22,6 +22,7 @@
         <item name="android:singleLine">true</item>
     </style >
     <style name="textSmall" parent="margin">
+        <item name="android:textColor">@color/text_gray</item>
         <item name="android:textSize">12sp</item>
         <item name="android:singleLine">true</item>
     </style >
