--- a/playlistFeature/src/main/res/layout/item_track.xml
+++ b/playlistFeature/src/main/res/layout/item_track.xml
@@ -6,15 +6,17 @@
     android:background="@drawable/background"
     android:descendantFocusability="blocksDescendants"
     android:orientation="horizontal"
-    android:padding="@dimen/padding_small">
+    android:paddingTop="8dp"
+    android:paddingRight="16dp"
+    android:paddingBottom="8dp">
 
 
     <TextView
         android:id="@+id/position"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
         android:gravity="center"
-        android:text="TextView"
         android:textColor="@color/item_activatable_state_list"
         android:textStyle="bold"
         tools:text="12345" />
@@ -22,56 +24,32 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_marginLeft="16dp"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:padding="4dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/playlist_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-
-                android:layout_weight="1"
-                android:ellipsize="marquee"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"
-
-                android:scrollHorizontally="true"
-                android:singleLine="true"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textColor="@color/item_activatable_state_list"
-                android:textSize="@dimen/font_size_regular"
-                android:textStyle="bold"
-                tools:text="Song title" />
-
-            <TextView
-                android:id="@+id/duration"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:textColor="@color/item_activatable_state_list"
-                android:textSize="@dimen/font_size_regular"
-                tools:text="3:30" />
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/playlist_title"
+            style="@style/textInListSmall"
+            android:layout_weight="1"
+            tools:text="Song title" />
 
         <TextView
             android:id="@+id/song_info"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-
-
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:textColor="@color/item_activatable_state_list"
-            android:textSize="@dimen/font_size_small"
+            style="@style/textInListSmall"
             tools:text="song info" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/duration"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="16dp"
+        android:textColor="@color/item_activatable_state_list"
+        android:textSize="@dimen/font_size_regular"
+        tools:text="3:30" />
 
 </LinearLayout>
