--- a/playerFeature/src/main/res/layout/player.xml
+++ b/playerFeature/src/main/res/layout/player.xml
@@ -42,11 +42,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
 
+                    android:ellipsize="marquee"
+                    android:focusable="true"
+
                     android:fontFamily="@font/a_lcdnova_allfont_ru"
                     android:gravity="center_vertical"
-
-                    android:focusable="true"
-                    android:ellipsize="marquee"
                     android:marqueeRepeatLimit="marquee_forever"
                     android:singleLine="true"
 
@@ -71,12 +71,12 @@
                     android:layout_height="wrap_content"
 
 
+                    android:ellipsize="marquee"
+                    android:focusable="true"
                     android:focusableInTouchMode="true"
+
                     android:fontFamily="@font/a_lcdnova_allfont_ru"
                     android:gravity="center_vertical"
-
-                    android:focusable="true"
-                    android:ellipsize="marquee"
                     android:marqueeRepeatLimit="marquee_forever"
                     android:singleLine="true"
 
@@ -86,12 +86,20 @@
 
             </LinearLayout>
 
+            <com.yes.player.presentation.ui.VisualizerView
+                android:id="@+id/visualizerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:visibility="visible" />
+
             <FrameLayout
                 android:id="@+id/composeContainer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:background="@drawable/border_left_right">
+                android:background="@drawable/border_left_right"
+                android:visibility="gone">
                 <!--  <com.yes.player.presentation.ui.VisualizerView
                     android:id="@+id/visualizer"
                     android:layout_width="match_parent"
