--- a/playlistFeature/src/main/res/layout/playlist.xml
+++ b/playlistFeature/src/main/res/layout/playlist.xml
@@ -7,21 +7,38 @@
     android:orientation="vertical">
 
     <FrameLayout
-
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
         android:layout_weight="1"
-        android:background="@drawable/display">
+        android:background="@drawable/button_space"
+        android:paddingLeft="5dp"
+        android:paddingTop="5dp"
+        android:paddingRight="5dp"
+        android:paddingBottom="5dp">
+
         <androidx.recyclerview.widget.RecyclerView
-           android:id="@+id/playList"
+            android:id="@+id/playList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="2dp"
-            android:background="#000000"
-            android:scrollbars="vertical"
-            tools:itemCount="10"
-            tools:listitem="@layout/item_track" />
+            android:layout_weight="1"
+            tools:itemCount="30" />
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:indeterminateTint="@color/tint"
+            android:visibility="gone" />
+
+        <View
+            android:id="@+id/disableView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#88000000"
+            android:visibility="gone" />
 
     </FrameLayout>
 
