--- a/coreUI/src/main/res/layout/dialog.xml
+++ b/coreUI/src/main/res/layout/dialog.xml
@@ -11,6 +11,42 @@
 
     <FrameLayout
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
+        android:layout_weight="1"
+        android:background="@drawable/button_space"
+        android:paddingLeft="5dp"
+        android:paddingTop="5dp"
+        android:paddingRight="5dp"
+        android:paddingBottom="5dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            tools:itemCount="30" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:indeterminateTint="@color/tint"
+            android:visibility="gone" />
+
+        <View
+            android:id="@+id/disableView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#88000000"
+            android:visibility="gone" />
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/display"
         android:visibility="visible">
@@ -29,43 +65,6 @@
             android:textColor="@color/black"
             android:textSize="@dimen/font_size_large"
             tools:text="hello" />
-    </FrameLayout>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
-        android:layout_weight="1"
-        android:background="@drawable/button_space"
-        android:paddingLeft="8dp"
-        android:paddingTop="5dp"
-        android:paddingRight="8dp"
-        android:paddingBottom="5dp">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            tools:itemCount="30"
-             />
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:indeterminateTint="@color/tint"
-            android:visibility="gone" />
-
-        <View
-            android:id="@+id/disableView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#88000000"
-            android:visibility="gone" />
-
     </FrameLayout>
 
 
