--- a/coreUI/src/main/res/values/colors.xml
+++ b/coreUI/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
 
     <color name="shadow">#111111</color>
     <color name="gray">#888888</color>
-    <color name="light">#888888</color>
+    <color name="light">#48484e</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
 
