--- a/playListDialogFeature/src/main/res/layout/item_playlist.xml
+++ b/playListDialogFeature/src/main/res/layout/item_playlist.xml
@@ -11,11 +11,12 @@
 
     <TextView
         android:id="@+id/id"
+        style="@style/leadingIcon"
         android:layout_width="match_parent"
+
         android:layout_height="wrap_content"
 
         android:layout_weight="7"
-
         android:gravity="center"
         android:textColor="@color/item_activatable_state_list"
         android:textSize="@dimen/font_size_regular"
@@ -24,17 +25,20 @@
 
     <TextView
         android:id="@+id/playlist_title"
+        style="@style/textInListLarge"
         android:layout_width="match_parent"
+
         android:layout_height="wrap_content"
 
+        android:layout_gravity="center"
         android:layout_weight="1"
 
         android:ellipsize="marquee"
+        android:gravity="center_vertical"
         android:marqueeRepeatLimit="marquee_forever"
         android:paddingStart="10dp"
         android:scrollHorizontally="true"
         android:singleLine="true"
-
         android:textColor="@color/item_activatable_state_list"
         android:textStyle="bold"
         tools:text="Playlist title" />
