--- a/trackdialogFeature/src/main/res/layout-land/track_dialog.xml
+++ b/trackdialogFeature/src/main/res/layout-land/track_dialog.xml
@@ -1,6 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/panel_flat"
+    android:orientation="vertical"
+    android:padding="8dp"
+    android:theme="@style/Theme.MusicPlayer">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:padding="8dp">
+
+        <include
+            android:id="@+id/recyclerViewContainer"
+            layout="@layout/dialog"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="bottom"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/linearLayout2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <FrameLayout
+                    style="@style/margin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/button_space">
+
+                    <EditText
+                        android:id="@+id/networkPath"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="8dp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                        android:textColor="@color/green"
+                        tools:text="hello"
+                        tools:visibility="visible" />
+                </FrameLayout>
+
+                <FrameLayout
+                    android:id="@+id/frameLayout2"
+                    style="@style/margin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:background="@drawable/button_space">
+
+                    <CheckBox
+                        android:id="@+id/network_btn"
+                        style="@style/buttonSingleLow"
+                        android:background="@drawable/button_single"
+                        android:button="@null"
+                        android:checked="true"
+                        android:foreground="@drawable/wan"
+                        android:foregroundGravity="center"
+                        android:foregroundTint="@color/tint_pressed_state_list" />
+
+                </FrameLayout>
+
+            </LinearLayout>
+
+            <include
+                android:id="@+id/buttons"
+                style="@style/margin"
+                layout="@layout/cancel_ok"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+</FrameLayout>
